[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Tileset.png" type="Texture" id=1]
[ext_resource path="res://Enemies/fallingSpikeEnemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 29.25 )

[node name="fallingSpikeEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="SpikeCollider" type="CollisionPolygon2D" parent="."]
position = Vector2( -12, 12 )
polygon = PoolVector2Array( 12, -13, 15, -26, 9, -26 )

[node name="SpikeSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )

[node name="StartRange" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="StartRange"]
position = Vector2( 0, 15.25 )
shape = SubResource( 4 )

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Tip" type="Area2D" parent="."]

[node name="TipCollider" type="CollisionPolygon2D" parent="Tip"]
position = Vector2( 0, -13 )
rotation = 3.14159
polygon = PoolVector2Array( 0, -12, -2, -5, 2, -5 )

[connection signal="body_entered" from="StartRange" to="." method="_on_StartRange_body_entered"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_AttackDelay_timeout"]
[connection signal="body_entered" from="Tip" to="." method="_on_Tip_body_entered"]
